Fix sidebar bullet alignment for multi-line items

--- a/docs/assets/scss/_sidebar.scss
+++ b/docs/assets/scss/_sidebar.scss
@@ -241,6 +241,8 @@
     display: inline-flex;
     justify-content: center;
     align-items: center;
+    align-self: flex-start;
+    line-height: 1.2;
     width: 1.5rem;
     min-width: 1.5rem;
     flex-shrink: 0;
